gccida/c0/df_bb_ud_chain_create
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_ud_chain_create/src/df.c:1989:4: error: expected ';' after expression
rtx insn; // [rsp+58h] [rbp-28h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_ud_chain_create/src/df.c:1989:5: error: use of undeclared identifier 'insn'
rtx insn; // [rsp+58h] [rbp-28h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_ud_chain_create/src/df.c:1993:17: error: expected identifier or '('
 struct bb_info = &df_0->bbs[bb->index]; 
                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_ud_chain_create/src/df.c:1996:7: error: use of undeclared identifier 'insn'
for ( insn = bb->head; ; insn = insn[1].fld[0].rtx ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_ud_chain_create/src/df.c:1996:26: error: use of undeclared identifier 'insn'
for ( insn = bb->head; ; insn = insn[1].fld[0].rtx ) 
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_ud_chain_create/src/df.c:1996:33: error: use of undeclared identifier 'insn'
for ( insn = bb->head; ; insn = insn[1].fld[0].rtx ) 
                                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_ud_chain_create/src/df.c:1999:6: error: use of undeclared identifier 'insn'
if ( insn ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_ud_chain_create/src/df.c:2000:6: error: use of undeclared identifier 'insn'
v4 = insn != bb->end[1].fld[0].rtx; 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_ud_chain_create/src/df.c:2003:7: error: use of undeclared identifier 'insn'
uid = insn->fld[0].rtuint; 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_ud_chain_create/src/df.c:2004:47: error: use of undeclared identifier 'insn'
if ( rtx_class[( unsigned __int16)*( _DWORD *)insn] == 105 ) 
                                              ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_ud_chain_create/src/obj/df.o] Error 1
